# redis-operator

./: .bazelrc  .dockerignore  .drone.yaml  .drone.yml  .gitignore  BUILD.bazel  Dockerfile  Makefile  PROJECT  README.md  WORKSPACE  code-of-conduct.md  go.mod  go.mod.bzl  go.sum  main.go  tools.go
api/v1alpha1/: BUILD.bazel  doc.go  groupversion_info.go  redis_types.go  zz_generated.deepcopy.go  zz_generated.openapi.go
cmd/manager/: BUILD.bazel  main.go
config/crd/bases/: k8s.amaiz.com_redis.yaml  k8s_v1alpha1_redis_crd.yaml
config/crd/patches/: cainjection_in_redis.yaml  webhook_in_redis.yaml
config/default/: kustomization.yaml
config/manager/: Deployment.yaml  manager.yaml
config/rbac/: role.yaml
controllers/: BUILD.bazel  deepcontains.go  deepcontains_test.go  object_generator.go  object_generator_test.go  redis_controller.go
controllers/redis/: BUILD.bazel  redis.go  redis_test.go
deploy/: ClusterRole.yaml  ClusterRoleBinding.yaml  Deployment.yaml  ZZ_Deployment.yaml  kustomization.yaml
deploy/crds/: k8s_v1alpha1_redis_crd.yaml
example/: k8s_v1alpha1_redis_cr.yaml
hack/: boilerplate.go.txt  print-status.sh  update-deps.sh
pkg/apis/: BUILD.bazel  addtoscheme_k8s_v1alpha1.go  apis.go
pkg/apis/k8s/: BUILD.bazel  group.go
pkg/apis/k8s/v1alpha1/: BUILD.bazel  doc.go  redis_types.go  register.go  zz_generated.deepcopy.go  zz_generated.defaults.go  zz_generated.openapi.go
pkg/controller/: BUILD.bazel  add_redis.go  controller.go
pkg/controller/redis/: BUILD.bazel  deepcontains.go  deepcontains_test.go  object_generator.go  object_generator_test.go  redis_controller.go
pkg/redis/: BUILD.bazel  redis.go  redis_test.go
version/: BUILD.bazel  version.go
