load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["redis.go"],
    importpath = "github.com/amaizfinance/redis-operator/controllers/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/cenkalti/backoff/v3:go_default_library",
        "//vendor/github.com/go-redis/redis:go_default_library",
        "//vendor/github.com/spf13/cast:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["redis_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/go-redis/redis:go_default_library"],
)
