load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "addtoscheme_k8s_v1alpha1.go",
        "apis.go",
    ],
    importpath = "github.com/amaizfinance/redis-operator/pkg/apis",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/k8s/v1alpha1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
    ],
)
